# Arithmetic-Algorithm

./: ArithmeticAlgorithm.ipynb  ArithmeticCode.py  Arithmetic_Table.py  LICENSE  NNArithmeticCodding.py  README.md  pyproject.toml
src/: ArithmeticCode.py
src/arith_codding/: ArithmeticCode.py
